src/test/ui/attributes/obsolete-attr.stderr
error[E0658]: The attribute `fixed_stack_segment` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/obsolete-attr.rs:5:3
   |
LL | #[fixed_stack_segment] fn f() {}
   |   ^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error[E0658]: The attribute `ab_isize` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/obsolete-attr.rs:3:3
   |
LL | #[ab_isize="stdcall"] extern {}
   |   ^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
